# sequitur

./: .gitignore  LICENSE  btrack_to_zarr.ipynb  example_data_to_format.py  pyproject.toml
examples/: btrack_h5_example.ipynb  ctc_motile.py  save_from_networkx_json.ipynb
sequitur/: __init__.py  build_file.py  format.py  reader.py  schema.py  sequitur.py  validate.py  writer.py
sequitur/parquet/: parquet_io.py  reader.py  writer.py
sequitur/zarr/: reader.py  writer.py  zarr_io.py
tests/: conftest.py  test_io_parquet.py  test_io_zarr.py  test_networkx_io.py  test_sequitur.py  test_validate.py  test_write_read.py  test_writer.py
