[tool.poetry]
name = "sequitur"
version = "0.1.0"
description = ""
authors = ["jdeschamps <6367888+jdeschamps@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
zarr = "^2.14"
pyarrow = "^11.0"
pandas = "^1.5"
pydantic = "^1.10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
